--- a/src/ChannelModesViewController.html
+++ b/src/ChannelModesViewController.html
@@ -72,7 +72,7 @@
         }
 
         </style>
-        <script type="text/javascript" src="channel-modes.js"></script>
+        <script type="text/javascript" src="ChannelModesViewController.js"></script>
     </head>
     <body>
         <p style="margin-top: 0px; margin-bottom: 0px;">Topic</p>
