--- a/src/index.html
+++ b/src/index.html
@@ -12,27 +12,50 @@
         <div class="window">
             <table id="window-content" border="0" cellpadding="0" cellspacing="0">
                 <tr id="window-panels">
-                    <td id="left-column" valign="top">
-                        <ul id="network-list"></ul>
-                    </td>
+                    <td id="left-column" valign="top"><ul id="network-list"></ul></td>
                     <td id="right-column" valign="top"></td>
-                </td>
+                </tr>
+                <tr>
+                    <td colspan="3" style="height: 35px; user-select: none;" valign="bottom">
+                        <footer class="toolbar toolbar-footer">
+                            <div class="toolbar-actions">
+                                <div class="btn-group" style="margin-left: 8px;">
+                                    <button class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
+                                    <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
+                                    <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
+                                </div>
+                                <input id="chat-input" type="text" placeholder="Send Message …" autofocus>
+                            </div>
+                        </footer>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <template id="template-channel-modes-table">
+        <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; border-spacing: 0px 5px;">
+            <tr>
+                <td valign="top"><input type="checkbox" id="m-private"> <label for="m-private" class="input">Private</label></td>
+                <td valign="top" style="padding-left: 5px;"><input type="checkbox" id="m-inviteonly"> <label for="m-inviteonly" class="input">Invite Only</label></td>
             </tr>
             <tr>
-                <td colspan="3" style="height: 35px; user-select: none;" valign="bottom">
-                    <footer class="toolbar toolbar-footer">
-                        <div class="toolbar-actions">
-                            <div class="btn-group" style="margin-left: 8px;">
-                                <button class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
-                                <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
-                                <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
-                            </div>
-                            <input id="chat-input" type="text" placeholder="Send Message …" autofocus>
-                        </div>
-                    </footer>
-                </td>
+                <td valign="top"><input type="checkbox" id="m-moderated"> <label for="m-moderated" class="input">Moderated</label></td>
+                <td valign="top" style="padding-left: 5px;"><input type="checkbox" id="m-no-extmsg"> <label for="m-no-extmsg" class="input">No external messages</label></td>
+            </tr>
+            <tr>
+                <td valign="top"><input type="checkbox" id="m-secret"> <label for="m-secret" class="input">Secret</label></td>
+                <td valign="top" style="padding-left: 5px;"><input type="checkbox" id="m-opstopic"> <label for="m-opstopic" class="input">Only ops can change topic</label></td>
             </tr>
         </table>
-    </div>
-</body>
+        <table border="0" cellpadding="0" cellspacing="0" style="margin-top: 10px; margin-left: 20px;">
+            <tr>
+                <td style="text-align: right; padding-right: 5px;">Key:</td>
+                <td><input type="text" style="width: 100px" /></td>
+            </tr>
+            <tr>
+                <td style="text-align: right; padding-right: 5px;">Max Users:</td>
+                <td><input type="text" style="width: 100px" /></td>
+            </tr>
+        </table>
+        </template>
+    </body>
 </html>
