--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,12 @@
         </table>
         <table border="0" cellpadding="0" cellspacing="0" style="margin-top: 10px; margin-left: 20px;">
             <tr>
-                <td style="text-align: right; padding-right: 5px;">Key:</td>
-                <td><input type="text" style="width: 100px" /></td>
+                <td style="text-align: right; padding-right: 5px;"><label for="m-key">Key:</label></td>
+                <td><input type="text" id="m-key" style="width: 100px" /></td>
             </tr>
             <tr>
-                <td style="text-align: right; padding-right: 5px;">Max Users:</td>
-                <td><input type="text" style="width: 100px" /></td>
+                <td style="text-align: right; padding-right: 5px;"><label for="m-max-users">Max Users:</label></td>
+                <td><input type="text" id="m-max-users" style="width: 100px" /></td>
             </tr>
         </table>
         </template>
