--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                         <footer class="toolbar toolbar-footer">
                             <div class="toolbar-actions">
                                 <div class="btn-group" style="margin-left: 8px;">
-                                    <button class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
+                                    <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
                                     <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
                                     <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
                                 </div>
