--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" type="text/css" href="icons.css">
+        <!-- Styles -->
+        <link rel="stylesheet" type="text/css" href="styles/index.css">
+        <link rel="stylesheet" type="text/css" href="styles/messages.css">
+        <link rel="stylesheet" type="text/css" href="styles/photon.css">
+        <!-- Fonts -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans">
+        <!-- Scripts -->
         <script src="index.js"></script>
     </head>
     <body>
