--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
         <!-- Styles -->
         <link rel="stylesheet" type="text/css" href="styles/index.css">
         <link rel="stylesheet" type="text/css" href="styles/messages.css">
+        <link rel="stylesheet" type="text/css" href="styles/channels-panel.css">
+        <link rel="stylesheet" type="text/css" href="styles/users-panel.css">
+        <link rel="stylesheet" type="text/css" href="styles/prompts.css">
         <link rel="stylesheet" type="text/css" href="styles/photon.css">
         <!-- Fonts -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans">
