Individual inputs for each channel to allow for individual channel input history

--- a/src/index.html
+++ b/src/index.html
@@ -19,22 +19,21 @@
         <div class="window">
             <table id="window-content" border="0" cellpadding="0" cellspacing="0">
                 <tr id="window-panels">
-                    <td id="left-column" valign="top"><ul id="network-list"></ul></td>
-                    <td id="right-column" valign="top"></td>
-                </tr>
-                <tr>
-                    <td colspan="3" style="height: 35px; user-select: none;" valign="bottom">
-                        <footer class="toolbar toolbar-footer">
-                            <div class="toolbar-actions">
-                                <div class="btn-group" style="margin-left: 8px;">
-                                    <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
-                                    <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
-                                    <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
+                    <td id="left-column" valign="top">
+                        <ul id="network-list"></ul>
+                        <div style="height: 35px; user-select: none;">
+                            <footer class="toolbar toolbar-footer">
+                                <div class="toolbar-actions">
+                                    <div class="btn-group" style="margin-left: 8px;">
+                                        <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
+                                        <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
+                                        <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
+                                    </div>
                                 </div>
-                                <input id="chat-input" type="text" placeholder="Send Message …" autofocus>
-                            </div>
-                        </footer>
+                            </footer>                        
+                        </div>
                     </td>
+                    <td id="right-column" valign="top"></td>
                 </tr>
             </table>
         </div>
