--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,7 @@
                             <footer class="toolbar toolbar-footer">
                                 <div class="toolbar-actions">
                                     <div class="btn-group" style="margin-left: 8px;">
-                                        <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-plus"></span></button>
-                                        <button class="btn btn-default btn-menu"><span class="icon icon-user"></span></button>
-                                        <button class="btn btn-default btn-menu"><span class="icon icon-cog"></span></button>
+                                        <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-flash icon-text"></span> Connect to Server</button>
                                     </div>
                                 </div>
                             </footer>                        
