Finished localization for English
I hope

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
                             <footer class="toolbar toolbar-footer">
                                 <div class="toolbar-actions">
                                     <div class="btn-group" style="margin-left: 8px;">
-                                        <button id="btn-add-server" class="btn btn-default btn-menu"><span class="icon icon-flash icon-text"></span> Connect to Server</button>
+                                        <button id="btn-add-server" class="btn btn-default btn-menu">
+                                            <span class="icon icon-flash icon-text"></span> <span id="lbl-connect-to-server">CONNECT_TO_SERVER</span>
+                                        </button>
                                     </div>
                                 </div>
                             </footer>                        
