Added option to preformat text, such as the MOTD

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="styles/photon.css">
         <!-- Fonts -->
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata">
         <!-- Scripts -->
         <script src="index.js"></script>
     </head>
