--- a/src/about.html
+++ b/src/about.html
@@ -11,17 +11,21 @@
         </style>
         <script type"text/javascript">
             function close() {
-                const remote = require('electron').remote
+                const { remote } = require('electron')
                 let window = remote.getCurrentWindow()
                 window.close()
             }
+            document.addEventListener('DOMContentLoaded', function (event) {
+                const packageInfo = require('./../package.json')
+                document.getElementById('client-version').innerText = packageInfo.version
+            })
         </script>
     </head>
     <body style="background: white; margin: 0px; padding: 0px;">
         <div style="border-bottom: 1px solid #ddd; text-align: center; margin-bottom: 20px; margin-top: 20px; padding-bottom: 20px;">
             <img src="../app.ico" style="width: 80px; height: 80px;" />
             <div style="font-weight: bold; margin-bottom: 10px;">jsIRC</div>
-            <div>Version <span id="client-version">0.0.1</span></div>
+            <div>Version <span id="client-version">0.0.*</span></div>
         </div>
         <button id="close-button" style="float: right; margin-right: 20px; width: 100px;" onclick="window.close()">Close</button>        
     </body>
