Settings for default reginfo and notifications

--- a/src/about.html
+++ b/src/about.html
@@ -27,6 +27,6 @@
             <div style="font-weight: bold; margin-bottom: 10px;">jsIRC</div>
             <div>Version <span id="client-version">0.0.*</span></div>
         </div>
-        <button id="close-button" style="float: right; margin-right: 20px; width: 100px;" onclick="window.close()">Close</button>        
+        <button id="close-button" style="float: right; margin-right: 20px; width: 100px;" onclick="close()">Close</button>        
     </body>
 </html>
